--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,14 @@
     // already sent during Backbone routing.
     // ga('send', 'pageview');
   </script>
+  <script type="text/javascript">
+    var _uxa = _uxa || [];
+    (function() {
+       var uxa = document.createElement("script"); uxa.type = "text/javascript"; uxa.async = true;
+       uxa.src = "//www.uxarmy.com/test/js";
+       document.getElementsByTagName("head")[0].appendChild(uxa);
+    })();
+  </script>
 </head>
 <body>
   <div id="nm-wrapper">
