--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,14 @@
        document.getElementsByTagName("head")[0].appendChild(uxa);
     })();
   </script>
+  <div id="uxarmy-button"></div>
+  <script>(function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "http://www.uxarmy.com/test/633/embed.js/";
+     fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'uxarmy-js'));</script>
 </head>
 <body>
   <div id="nm-wrapper">
