--- a/app/index.html
+++ b/app/index.html
@@ -90,8 +90,8 @@
                         <h5 class="section-title">Product</h5>
                         <ul>
                           <!-- <li><a href="#">Tour</a></li> -->
-                          <li><a href="/help">Help</a></li>
-                          <li><a href="/support">Chat With Us</a></li>
+                          <li><a href="/#help">Help</a></li>
+                          <li><a href="/#support">Chat With Us</a></li>
                           <!-- <li><a href="#">Contribute</a></li> -->
                           <li><a href="https://github.com/nusmodifications/nusmods-api" target="_blank">API</a></li>
                         </ul>
@@ -99,8 +99,8 @@
                       <div class="col-md-6 col-xs-6">
                         <h5 class="section-title">NUSMods</h5>
                         <ul>
-                          <li><a href="/about">About</a></li>
-                          <li><a href="/team">The Team</a></li>
+                          <li><a href="/#about">About</a></li>
+                          <li><a href="/#team">The Team</a></li>
                           <!-- <li><a href="#">Blog</a></li> -->
                           <li><a href="mailto:mods@nusmods.com">Contact Us</a></li>
                         </ul>
