--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,9 @@
         <div class="nm-current-week hidden-xs hidden-sm">
           <span class="js-nm-current-week-text"></span>
         </div>
+        <div class="nm-current-week nm-harlem-shake" style="float:left; cursor:pointer">
+          DO THE HARLEM SHAKE!!!
+        </div>
       </div>
     </header>
 
